# os

./: CMakeLists.txt
lw1-convertingAutomata/: CMakeLists.txt  CMiles.cpp  CMiles.h  CMilesOld.hpp  CMura.cpp  CMura.h  main.cpp  utils.cpp  utils.h
lw2-minimization/: CMakeLists.txt  CMealy.cpp  CMealy.h  CMinimizer.cpp  CMinimizer.h  CMoore.cpp  CMoore.h  main.cpp  utils.cpp  utils.h
lw5/: CMakeLists.txt  main.cpp
lw5/src/: Args.h  Buffer.h  Common.h  Terminal.h
lw5/src/Components/: Exp.h  F.h  Idlist.h  Listst.h  Prog.h  T.h  Type.h  Var.h
