add_executable(
        os_recursive_descent
        main.cpp
        src/Args.h
        src/Terminal.h
        src/Common.h
        src/Buffer.h
        src/Components/Prog.h
        src/Components/Var.h
        src/Components/Idlist.h
        src/Components/Type.h
        src/Components/Listst.h
        src/Components/Exp.h
        src/Components/T.h
        src/Components/F.h
)
